alterações no appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host = localhost; Port=5432; Database=BDSIGEDESP; User Id=postgres; password = postdba;"
+    "DefaultConnection": "Host = localhost; Port=5432; Database=BDSIGEDESP; User Id=postgres; password = 123456;"
   },
   "AllowedHosts": "*"
 }
